2003-02-12  Mo DeJong  <mdejong@users.sourceforge.net>

	Woops, forgot to add clsbr_private.xpm to
	Makefile.

	* bitmaps/Makefile.am: Add clsbr_private.xpm.
	* bitmaps/Makefile.in: Add clsbr_private.xpm
	by hand to avoid nasty automake regen.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* etc/sn_toolchains/gnu-pro-native: Change
	toolchain debugger name to insight instead of gdb.
	* gui/gdbtk.tcl (sn_debugger, sn_socket_accept):
	Debug print gdb command before exec'ing it.
	Declare sn_options as global to avoid var
	error when opening in an editor as the result
	of an Insight command.
	* gui/sninit.tcl (sn_init_globals): Default
	debugger name now set to insight.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/makepane.tcl (sn_make): Fix build dialog
	so that it does not flash on screen when first
	mapped. The toplevel must be withdrawn and
	then mapped after idle calculations are done.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/dialog.tcl (tk_dialog_with_widgets): Fix
	fast create dialog so that it is centered properly.
	The call to update idletasks needs to happen
	before the req width and height are calculated.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/makepane.tcl (ExecMake): Pass only the Makefile
	name to the -f argument instead of passing a fully
	qualified path name. This should not change any
	functionality since the ExecMake command should
	cd to the proper directory first. Add some debug
	output and comments.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* bitmaps/clsbr_private.xpm: Add small empty
	image to represent a private class member.
	* gui/utilities.tcl: Define cls_br_private_image
	with date from clsbr_private.xpm.
	* hyper/services.c (class_browser_insert): Use
	cls_br_private_image as the image when a member
	with PAF_PRIVATE access is found. Check for
	PAF_PRIVATE explicitly instead of just assuming
	that a non-public and non-protected member is
	private.
